# gbox-cua

./: .gitignore  Dockerfile  INSTALL.md  INSTALLATION.md  LICENSE  README.md  build_docker.sh  docker-compose.yml  docker_run.sh  env.example  pyproject.toml  setup.py
gbox_cua/: __init__.py  agent.py  cli.py  gbox_client.py  gbox_coordinate.py  tools.py  vlm_inference.py
